# pyspark-etl-automation

./: .env  .gitignore  README.md  docker-compose.yml  dockerfile  etl.cfg  integration_test.py  main.py  pyproject.toml
