[tool.poetry]
name = "take-home-test"
version = "0.1.0"
description = "Sertis data engineering take home test"
authors = ["J. Doe"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "3.1.2"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
